# Practica1EDD

./: CMakeLists.txt  README.md  diagrama_tad.puml  main.cpp  manual_totito_chino.md
Iteradores/IteradorLED/: IteradorLED.cpp  IteradorLED.h
Iteradores/IteradorMatriz/: IteradorMatriz.cpp  IteradorMatriz.h
Iteradores/IteradorSimple/: IteradorSimple.cpp  IteradorSimple.h
Juego/: Color.h  TotitoChino.cpp  TotitoChino.h
Juego/Casilla/: Casilla.cpp  Casilla.h
Juego/Conversor/: Auxiliar.cpp  Auxiliar.h  Conversor.cpp  Conversor.h
Juego/CreadorDeMatriz/: CreadorDeMatriz.cpp  CreadorDeMatriz.h
Juego/CreadorDePowerUps/: CreadorPowerUps.cpp  CreadorPowerUps.h
Juego/ExtractorCoordenadas/: ExtractorCoordenadas.cpp  ExtractorCoordenadas.h
Juego/Jugador/: Jugador.cpp  Jugador.h
Juego/Linea/: Linea.cpp  Linea.h
Juego/ManejadorPowerUp/: ManejadorPowerUp.cpp  ManejadorPowerUp.h
Juego/PowerUp/: PowerUp.cpp  PowerUp.h
Juego/PowerUp/AQueCosto/: AQueCosto.cpp  AQueCosto.h
Juego/PowerUp/Bloqueo/: Bloqueo.cpp  Bloqueo.h
Juego/PowerUp/DobleLinea/: DobleLinea.cpp  DobleLinea.h
Juego/PowerUp/Escurridizo/: Escurridizo.cpp  Escurridizo.h
Juego/PowerUp/Explosivo/: Explosivo.cpp  Explosivo.h
Juego/PowerUp/LlaveSecreta/: LlaveSecreta.cpp  LlaveSecreta.h
Juego/PowerUp/NuevasTierras/: NuevasTierras.cpp  NuevasTierras.h
Juego/PowerUp/Pase/: Pase.cpp  Pase.h
Juego/PowerUp/TrampaSecreta/: TrampaSecreta.cpp  TrampaSecreta.h
Juego/PowerUp/UnionAFuturo/: UnionAFuturo.cpp  UnionAFuturo.h
Juego/ProcesadorOpciones/: ProcesadorOpciones.cpp  ProcesadorOpciones.h
Juego/Punto/: Punto.cpp  Punto.h
Juego/RegistroJugadores/: RegistroJugadores.cpp  RegistroJugadores.h
Juego/VerificadorCuadros/: VerificadorCuadros.cpp  VerificadorCuadros.h
estructuras_de_datos/Cola/: ColaConArreglo.cpp  ColaConArreglo.h
estructuras_de_datos/ColaEnlazada/: ColaEnlazada.cpp  ColaEnlazada.h
estructuras_de_datos/ListaEnlazadaDoble/: ListaDobleEnlazada.cpp  ListaDobleEnlazada.h  NodoDoble.cpp  NodoDoble.h
estructuras_de_datos/ListaEnlazadaDoble/NodoDoble/: ListaDobleEnlazada.cpp  ListaDobleEnlazada.h
estructuras_de_datos/MatrizD/: Matriz.cpp  Matriz.h
estructuras_de_datos/MatrizD/AgregarMatriz/: AgregadorMatriz.cpp  AgregadorMatriz.h
estructuras_de_datos/MatrizD/BuscadorMatriz/: BuscadorMatriz.cpp  BuscadorMatriz.h
estructuras_de_datos/MatrizD/EliminadorMatriz/: EliminadorMatriz.cpp  EliminadorMatriz.h
estructuras_de_datos/MatrizD/ListaMatriz/: ListaMatriz.cpp  ListaMatriz.h
estructuras_de_datos/MatrizD/NodoMatriz/: NodoMatriz.cpp  NodoMatriz.h
estructuras_de_datos/Pila/: NodoSimple.cpp  NodoSimple.h  Pila.cpp  Pila.h
estructuras_de_datos/Pila/NodoSimple/: NodoSimple.h
